--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>Joyful Studio</title>
 </head>
 <body>
-  <div class="main-img">
+  <!-- <div class="main-img">
     <div class="button">
       <a href="https://www.instagram.com/joannajoyfulstudio/"
         target="_blank">SHOP POTTERY</a>
     </div>
-  </div>
+  </div> -->
 
 </body>
 </html>
