--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   <title>Joyful Studio</title>
 </head>
 <body>
-  <div class="main-img">
-    <div class="button">
-      <a href="https://www.instagram.com/joannajoyfulstudio/"
-        target="_blank">SHOP POTTERY</a>
+  <div class="container">
+    <div class="col-12 col-md-12 col-lg-12">
+      <div class="main-img">
+          <div class="button">
+          <a href="https://www.instagram.com/joannajoyfulstudio/"
+              target="_blank">SHOP POTTERY</a>
+          </div>
+      </div>
     </div>
   </div>
 </body>
